--- a/Web.Statu/Views/Manage/ShowAccountConfirmationCode.cshtml
+++ b/Web.Statu/Views/Manage/ShowAccountConfirmationCode.cshtml
@@ -1,5 +1,4 @@
-﻿@model IEnumerable<HlidacStatu.Lib.Data.WatchdogSmlouva>
-@using HlidacStatu.Lib.Data;
+﻿@using HlidacStatu.Lib.Data;
 @using System.Data.Entity;
 @using System.Data.Entity.Core.Objects;
 @using Microsoft.Owin.Security;
