--- a/Web.Statu/Views/Home/OsobaVazby.cshtml
+++ b/Web.Statu/Views/Home/OsobaVazby.cshtml
@@ -112,7 +112,7 @@
         <div class="col-md-10 col-md-offset-1">
             <h2>@Model.FullName()</h2>
             <p>@Model.StatusOsoby().ToNiceDisplayName()</p>
-            <p>Přehled vazeb politika na firmy</p>
+            <p>Přehled vazeb osoby na firmy</p>
         </div>
     </div>
 }
